--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
+  "jsxSingleQuote": true,
   "bracketSpacing": true,
   "printWidth": 200
 }
