--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@headlessui/react": "1.6.4",
     "@heroicons/react": "1.0.6",
     "@next/bundle-analyzer": "^12.1.6",
+    "@tanem/react-nprogress": "^5.0.6",
     "axios": "^0.25.0",
     "classnames": "2.3.1",
     "cross-env": "^7.0.3",
@@ -33,6 +34,7 @@
     "next-seo": "5.4.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-transition-group": "4.4.2",
     "swiper": "^8.2.4",
     "swr": "^1.2.0"
